# ecommerce_project

./: README.md  ecommerce_project.ipynb  pyproject.toml  utils.py  variant1.ipynb
db/: olist_customers_dataset.csv:Zone.Identifier  olist_order_items_dataset.csv:Zone.Identifier  olist_orders_dataset.csv:Zone.Identifier
