[tool.poetry]
name = "ecommerce-project"
version = "0.1.0"
description = "Анализ совершенных покупок в интернет-магазине"
authors = ["Kseniya Agrova <kseniya.agrova@gmail.com>"]
readme = "README.md"
packages = [{include = "ecommerce_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
requests = "^2.28.2"
jupyter = "^1.0.0"
ipykernel = "^6.21.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
